--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <h3 class="text-2xl font-semibold text-white mb-2">My Personal Blog</h3>
                         <p class="text-slate-300">A blog where I share my thoughts, experiences, and learnings on various topics.</p>
                     </div>
-                    <a href="https://www.blogger.com/u/2/blog/posts/3731465789096262130" target="_blank" class="mt-4 inline-block text-teal-400 font-medium hover:underline transition-colors">
+                    <a href="https://tippannabangi.blogspot.com/" target="_blank" class="mt-4 inline-block text-teal-400 font-medium hover:underline transition-colors">
                         Read Blog →
                     </a>
                 </div>
@@ -350,4 +350,5 @@
         });
     </script>
 </body>
+
 </html>
