--- a/index.html
+++ b/index.html
@@ -281,30 +281,32 @@
         <!-- Contact Section -->
         <section id="contact" class="container mx-auto px-6 md:px-12 py-8 bg-slate-800 rounded-3xl shadow-xl">
             <h2 class="text-3xl font-bold text-center section-title mx-auto">Get In Touch</h2>
-            <div class="mt-8 max-w-2xl mx-auto flex flex-col md:flex-row items-start md:space-x-12">
-                <div class="md:w-1/2 mb-8 md:mb-0">
-                    <h3 class="text-2xl font-semibold text-white">Contact Details</h3>
-                    <ul class="mt-4 space-y-4">
-                        <li class="flex items-center space-x-3">
-                            <svg class="w-6 h-6 text-teal-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.009-8-6.009V6h16zM4 18V9.754l7.633 5.725c.19.143.431.218.672.218s.482-.075.672-.218L20 9.754V18H4z"/></svg>
-                            <span>Tippannahbangi@gmail.com</span>
-                        </li>
-                        <li class="flex items-center space-x-3">
-                            <svg class="w-6 h-6 text-teal-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17.34,6.29C16.95,5.9 16.32,5.9 15.93,6.29L12,10.22L8.07,6.29C7.68,5.9 7.05,5.9 6.66,6.29C6.27,6.68 6.27,7.31 6.66,7.7L10.59,11.63C11.37,12.41 12.63,12.41 13.41,11.63L17.34,7.7C17.73,7.31 17.73,6.68 17.34,6.29M21.9,12.1C21.9,12.1 21.9,12.1 21.9,12.1C21.9,12.1 21.9,12.1 21.9,12.1C21.9,17.59 17.59,21.9 12.1,21.9C6.61,21.9 2.3,17.59 2.3,12.1C2.3,6.61 6.61,2.3 12.1,2.3C12.1,2.3 12.1,2.3 12.1,2.3C17.59,2.3 21.9,6.61 21.9,12.1M22,12C22,6.48 17.52,2 12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12Z" /></svg>
-                            <span>+91 7795610812</span>
-                        </li>
-                        <li class="flex items-center space-x-3">
-                            <svg class="w-6 h-6 text-teal-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-                            <a href="https://www.linkedin.com/in/tippanna-bangi-2b1a77328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="text-slate-300 hover:text-teal-400">LinkedIn Profile</a>
-                        </li>
-                    </ul>
+            
+            <!-- Part 1: Contact Details & Socials -->
+            <div class="mt-8 max-w-4xl mx-auto text-center">
+                <h3 class="text-2xl font-semibold text-white">Contact Details & Socials</h3>
+                <ul class="mt-4 space-y-4 sm:space-y-0 sm:flex sm:justify-center sm:space-x-8 text-lg">
+                    <li class="flex items-center justify-center space-x-3">
+                        <svg class="w-6 h-6 text-teal-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.009-8-6.009V6h16zM4 18V9.754l7.633 5.725c.19.143.431.218.672.218s.482-.075.672-.218L20 9.754V18H4z"/></svg>
+                        <span>Tippannahbangi@gmail.com</span>
+                    </li>
+                    <li class="flex items-center justify-center space-x-3">
+                        <svg class="w-6 h-6 text-teal-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24c1.12.37 2.33.57 3.57.57c.55 0 1 .45 1 1V20c0 .55-.45 1-1 1c-9.39 0-17-7.61-17-17c0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
+                        <span>+91 7795610812</span>
+                    </li>
+                </ul>
+                <!-- LinkedIn Badge -->
+                <div class="mt-8 flex justify-center">
+                     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="tippanna-bangi-2b1a77328" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/tippanna-bangi-2b1a77328?trk=profile-badge">Tippanna Bangi</a></div>
                 </div>
-                <div class="md:w-1/2">
-                    <h3 class="text-2xl font-semibold text-white mb-4">Send a Message</h3>
-                    <!-- Tally form embed code -->
-                    <iframe data-tally-src="https://tally.so/embed/w26oMb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="GET IN TOUCH"></iframe>
-                    <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
-                </div>
+            </div>
+
+            <!-- Part 2: Send a Message Form -->
+            <div class="mt-16 max-w-2xl mx-auto">
+                <h3 class="text-2xl font-semibold text-white text-center mb-4">Send a Message</h3>
+                <!-- Tally form embed code -->
+                <iframe data-tally-src="https://tally.so/embed/w26oMb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="280" frameborder="0" marginheight="0" marginwidth="0" title="GET IN TOUCH"></iframe>
+                <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
             </div>
         </section>
 
@@ -315,6 +317,9 @@
         <p>© 2025 Tippanna Bangi. All rights reserved.</p>
         <p class="mt-2">Developed with Tailwind CSS</p>
     </footer>
+    
+    <!-- LinkedIn Badge Script -->
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
     <script>
         // Smooth scrolling for navigation links
