--- a/index.html
+++ b/index.html
@@ -289,26 +289,58 @@
         <section id="certifications" class="container mx-auto px-6 md:px-12 py-16 fade-in-section">
             <h2 class="text-4xl md:text-5xl font-bold text-center section-title mx-auto pb-4">Certifications</h2>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                <!-- Certification Card 1 -->
-                <a href="https://www.coursera.org/account/accomplishments/verify/Z6NKQVJTXXAX?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                <!-- Certification Card 1: Introduction to Digital Marketing -->
+                <a href="https://www.coursera.org/account/accomplishments/verify/Z6NKQVJTXXAX" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/v4zCnZCL/IMG-20250816-144049.jpg" alt="Introduction to Digital Marketing Certificate" class="w-full h-40 object-contain mb-4 rounded">
                         <h3 class="text-xl font-semibold text-white">Introduction to Digital Marketing</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">Meta</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Covers the fundamentals of digital marketing, social media marketing, and online advertising strategies.</p>
-                        <p class="mt-4 text-teal-400 font-medium">
-                            View Certificate →
-                        </p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
                     </div>
                 </a>
-                <!-- Certification Card 2 -->
+                
+                <!-- Certification Card 2: Data, Data, Everywhere -->
+                <a href="https://www.coursera.org/account/accomplishments/verify/J5E4E4E4X8XG" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                    <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/N6fxJtpC/IMG-20250816-143847.jpg" alt="Data, Data, Everywhere Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <h3 class="text-xl font-semibold text-white">Data, Data, Everywhere</h3>
+                        <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">Google</span></p>
+                        <p class="text-slate-300 mt-4 flex-grow">Focuses on the importance of data, the data analysis process, and the foundational concepts of data analytics.</p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
+                    </div>
+                </a>
+
+                <!-- Certification Card 3: Data Entry Operator -->
                 <a href="https://www.edubridgeindia.com/certificate-detail?enrollment_number=EBEON0225986007" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/TzYMrTH/IMG-20250816-143652.jpg" alt="Data Entry Operator Certificate" class="w-full h-40 object-contain mb-4 rounded">
                         <h3 class="text-xl font-semibold text-white">Data Entry Operator</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">EduBridge</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Proficiency in data entry techniques, accuracy, speed, and use of relevant software tools.</p>
-                        <p class="mt-4 text-teal-400 font-medium">
-                            View Certificate →
-                        </p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
+                    </div>
+                </a>
+
+                <!-- Certification Card 4: Agile Project Management -->
+                <a href="https://www.life-global.org/certificate/89598ac6-6a29-4d56-a218-74a4bf2061e7" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                    <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/qLWhmp0Y/IMG-20250816-143450.jpg" alt="Agile Project Management Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <h3 class="text-xl font-semibold text-white">Agile Project Management</h3>
+                        <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">HP LIFE</span></p>
+                        <p class="text-slate-300 mt-4 flex-grow">Introduces the principles of Agile methodology for project management, focusing on flexibility and collaboration.</p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
+                    </div>
+                </a>
+
+                <!-- Certification Card 5: AI for Business Professionals -->
+                <a href="https://www.life-global.org/certificate/ec1465df-0f5f-457c-be01-63681c971cb1" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                    <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/JRtL8zyj/certificate.jpg" alt="AI for Business Professionals Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <h3 class="text-xl font-semibold text-white">AI for Business Professionals</h3>
+                        <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">HP LIFE</span></p>
+                        <p class="text-slate-300 mt-4 flex-grow">Provides an overview of how AI can be leveraged for business applications and strategic decision-making.</p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
                     </div>
                 </a>
             </div>
@@ -419,3 +451,4 @@
     </script>
 </body>
 </html>
+
