--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <polyline points="16 18 22 12 16 6"/>
                         <polyline points="8 6 2 12 8 18"/>
                     </svg>
-                    <h3 class="text-xl font-semibold text-white">Python & SQL</h3>
+                    <h3 class="text-xl font-semibold text-white">Python Beginner</h3>
                 </div>
                 <!-- Skill Card -->
                 <div class="bg-slate-800 p-6 rounded-2xl shadow-lg text-center flex flex-col items-center justify-center space-y-3 transform transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:bg-slate-700 group content-container">
@@ -227,7 +227,7 @@
                         <path d="M15 18h2"/>
                         <path d="M7 18h2"/>
                     </svg>
-                    <h3 class="text-xl font-semibold text-white">AI & Automation</h3>
+                    <h3 class="text-xl font-semibold text-white">I know how to use AI in an efficient way</h3>
                 </div>
                 <!-- Skill Card -->
                 <div class="bg-slate-800 p-6 rounded-2xl shadow-lg text-center flex flex-col items-center justify-center space-y-3 transform transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:bg-slate-700 group content-container">
