--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@
         </section>
     </main>
 
+    <!-- Floating "Download Resume" button -->
+    <a href="https://drive.google.com/file/d/1QxJe8d9uYTP08JqPNdJlXWikMv-9PmsQ/view?usp=drive_link" target="_blank" download class="fixed bottom-8 right-8 z-50 flex items-center justify-center px-6 py-3 bg-teal-500 rounded-full shadow-lg transition-all duration-300 hover:bg-teal-400 hover:scale-110 group animate-pulse text-slate-900 font-bold">Download Resume</a>
+    
     <!-- Footer -->
     <footer class="bg-slate-900 text-slate-400 p-8 text-center border-t border-slate-800">
         <p>© 2025 Tippanna Bangi. All rights reserved.</p>
