--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
     <!-- Three.js CDN for 3D background -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+    <!-- Google tag (gtag.js) - ADDED HERE -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQ0T3HE23B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZQ0T3HE23B');
+    </script>
+    
     <style>
         /* General styling for the body and fonts */
         body {
