--- a/index.html
+++ b/index.html
@@ -409,6 +409,19 @@
                         <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
                     </div>
                 </a>
+
+                <!-- NEW Certification Card: Develop Your Creative Thinking and Innovation Skills -->
+                <a href="#" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                    <div class="flex flex-col h-full">
+                        <img src="https://i.ibb.co/60xp8Rgv/Screenshot-23.png" alt="Develop Your Creative Thinking and Innovation Skills Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <h3 class="text-xl font-semibold text-white">Develop Your Creative Thinking and Innovation Skills</h3>
+                        <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">LinkedIn Learning</span></p>
+                        <p class="text-slate-300 mt-4 flex-grow">This certification introduces principles and techniques for developing creative problem-solving and innovative thinking.</p>
+                        <!-- TODO: Replace the '#' with the actual verification URL for this certificate -->
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
+                    </div>
+                </a>
+
             </div>
         </section>
 
@@ -643,4 +656,3 @@
     </script>
 </body>
 </html>
-
