--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@
                 <!-- Certification Card 1: Introduction to Digital Marketing -->
                 <a href="https://www.coursera.org/account/accomplishments/verify/Z6NKQVJTXXAX" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/v4zCnZCL/IMG-20250816-144049.jpg" alt="Introduction to Digital Marketing Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/v4zCnZCL/IMG-20250816-144049.jpg" alt="Introduction to Digital Marketing Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Introduction to Digital Marketing</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">Meta</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Covers the fundamentals of digital marketing, social media marketing, and online advertising strategies.</p>
@@ -343,7 +345,9 @@
                 <!-- Certification Card 2: Data, Data, Everywhere -->
                 <a href="https://www.coursera.org/account/accomplishments/verify/J5E4E4E4X8XG" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/N6fxJtpC/IMG-20250816-143847.jpg" alt="Data, Data, Everywhere Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/N6fxJtpC/IMG-20250816-143847.jpg" alt="Data, Data, Everywhere Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Data, Data, Everywhere</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">Google</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Focuses on the importance of data, the data analysis process, and the foundational concepts of data analytics.</p>
@@ -354,7 +358,9 @@
                 <!-- Certification Card 3: Data Entry Operator -->
                 <a href="https://www.edubridgeindia.com/certificate-detail?enrollment_number=EBEON0225986007" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/TzYMrTH/IMG-20250816-143652.jpg" alt="Data Entry Operator Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/TzYMrTH/IMG-20250816-143652.jpg" alt="Data Entry Operator Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Data Entry Operator</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">EduBridge</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Proficiency in data entry techniques, accuracy, speed, and use of relevant software tools.</p>
@@ -365,7 +371,9 @@
                 <!-- Certification Card 4: Agile Project Management -->
                 <a href="https://certificates.hpe.com/certificate/01e4a68612/verify" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/qLWhmp0Y/IMG-20250816-143450.jpg" alt="Agile Project Management Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/qLWhmp0Y/IMG-20250816-143450.jpg" alt="Agile Project Management Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Agile Project Management</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">HP LIFE</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Introduces the principles of Agile methodology for project management, focusing on flexibility and collaboration.</p>
@@ -376,7 +384,9 @@
                 <!-- Certification Card 5: AI for Business Professionals -->
                 <a href="https://certificates.hpe.com/certificate/01a4e1564/verify" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/JRtL8zyj/certificate.jpg" alt="AI for Business Professionals Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/JRtL8zyj/certificate.jpg" alt="AI for Business Professionals Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">AI for Business Professionals</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">HP LIFE</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Provides an overview of how AI can be leveraged for business applications and strategic decision-making.</p>
@@ -388,7 +398,9 @@
                 <a href="https://www.linkedin.com/learning/certificates/eee1baedacdeef6226e387053f0c1e07a13a01bdbbfb5472d20704ca68d0c3b3" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
                         <!-- Using the image link provided by the user -->
-                        <img src="https://i.ibb.co/HDNtQzNx/Sales-Foundatiol.jpg" alt="Sales Foundation Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/HDNtQzNx/Sales-Foundatiol.jpg" alt="Sales Foundation Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Sales Foundation</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">LinkedIn Learning</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Fundamental concepts of sales, including communication, building rapport, and closing deals.</p>
@@ -401,7 +413,9 @@
                 <a href="#" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
                         <!-- Using the image link provided by the user -->
-                        <img src="https://i.ibb.co/wFQrxWp7/six-sigma-white-belt.jpg" alt="Six Sigma White Belt Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/wFQrxWp7/six-sigma-white-belt.jpg" alt="Six Sigma White Belt Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Six Sigma White Belt (Sales)</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">Educate 360</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">Introduces the basics of Six Sigma principles and methodology to improve process efficiency and quality.</p>
@@ -413,7 +427,9 @@
                 <!-- NEW Certification Card: Develop Your Creative Thinking and Innovation Skills -->
                 <a href="#" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
                     <div class="flex flex-col h-full">
-                        <img src="https://i.ibb.co/60xp8Rgv/Screenshot-23.png" alt="Develop Your Creative Thinking and Innovation Skills Certificate" class="w-full h-40 object-contain mb-4 rounded">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/60xp8Rgv/Screenshot-23.png" alt="Develop Your Creative Thinking and Innovation Skills Certificate" class="w-full h-full object-contain p-2">
+                        </div>
                         <h3 class="text-xl font-semibold text-white">Develop Your Creative Thinking and Innovation Skills</h3>
                         <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">LinkedIn Learning</span></p>
                         <p class="text-slate-300 mt-4 flex-grow">This certification introduces principles and techniques for developing creative problem-solving and innovative thinking.</p>
