--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         .fade-in-section.is-visible {
             opacity: 1;
             transform: translateY(0);
+            transform: translateY(0);
         }
         /* Style for the 3D background canvas */
         #bg-canvas {
@@ -324,6 +325,14 @@
                 </div>
             </div>
         </section>
+
+        <!-- Video Embed Below Education -->
+        <div class="container mx-auto px-6 md:px-12 py-16 bg-slate-800 rounded-3xl shadow-xl fade-in-section text-center">
+            <h3 class="text-3xl font-semibold text-white mb-6">Night Shifta Ninja Presentation at Deshpande Skilling</h3>
+            <div class="relative mx-auto w-full" style="padding-top: 56.25%; max-width: 853px;">
+                <iframe class="absolute inset-0 w-full h-full rounded-2xl" src="https://www.youtube.com/embed/fUnKiLq4RNk" title="Night Shifta Ninja Presentation at Deshpande Skilling" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <!-- Certifications Section -->
         <section id="certifications" class="container mx-auto px-6 md:px-12 py-16 fade-in-section">
