--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Google tag (gtag.js) - ADDED HERE -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQ0T3HE23B"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-      gtag('config', 'G-ZQ0T3HE23B');
+        gtag('config', 'G-ZQ0T3HE23B');
     </script>
 
     <style>
@@ -335,7 +335,7 @@
         </div>
 
         <!-- Certifications Section -->
-        <section id="certifications" class="container mx-auto px-6 md:px-12 py-16 fade-in-section">
+        <section id="certifications" class="container mx-auto px-6 md:px-12 py-16">
             <h2 class="text-4xl md:text-5xl font-bold text-center section-title mx-auto pb-4">Certifications</h2>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
                 <!-- Certification Card 1: Introduction to Digital Marketing -->
@@ -447,11 +447,24 @@
                     </div>
                 </a>
 
+                <!-- NEW Certification Card: Negotiation Professional Certificate -->
+                <a href="#" target="_blank" class="block p-8 bg-slate-800 rounded-2xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-2xl">
+                    <div class="flex flex-col h-full">
+                        <div class="w-full aspect-video overflow-hidden mb-4 rounded-lg bg-slate-700 flex items-center justify-center">
+                            <img src="https://i.ibb.co/WNnm8g93/1758638629093.jpg" alt="Negotiation Professional Certificate" class="w-full h-full object-contain p-2">
+                        </div>
+                        <h3 class="text-xl font-semibold text-white">Negotiation Professional Certificate</h3>
+                        <p class="text-slate-400 mt-2">Issued by: <span class="font-medium text-teal-400">American Negotiation Institute</span></p>
+                        <p class="text-slate-300 mt-4 flex-grow">Demonstrates advanced skills in negotiation, conflict resolution, and strategic communication.</p>
+                        <p class="mt-4 text-teal-400 font-medium">View Certificate →</p>
+                    </div>
+                </a>
+
             </div>
         </section>
 
         <!-- Short Films Section -->
-        <section id="short-films" class="container mx-auto px-6 md:px-12 py-16 bg-slate-800 rounded-3xl shadow-xl fade-in-section">
+        <section id="short-films" class="container mx-auto px-6 md:px-12 py-16 bg-slate-800 rounded-3xl shadow-xl">
             <h2 class="text-4xl md:text-5xl font-bold text-center section-title mx-auto pb-4">Short Films</h2>
             <div class="mt-12 text-center text-lg max-w-4xl mx-auto text-slate-300">
                 <p>
