--- a/index.html
+++ b/index.html
@@ -594,9 +594,11 @@
         <p class="mt-2">Developed with ❤️ & Tippanna </p>
     </footer>
 
-    <!-- Floating CV Button -->
-    <a href="https://drive.google.com/file/d/1QxJe8d9uYTP08JqPNdJlXWikMv-9PmsQ/view?usp=drive_link" target="_blank" class="fixed bottom-8 right-8 bg-teal-500 text-slate-900 w-16 h-16 rounded-full shadow-lg flex items-center justify-center font-bold text-xl hover:bg-teal-400 transform hover:scale-110 transition-all duration-300 z-50">
-        CV
+    <!-- Floating Resume Button -->
+    <a href="https://drive.google.com/file/d/1QxJe8d9uYTP08JqPNdJlXWikMv-9PmsQ/view?usp=drive_link" target="_blank" class="fixed bottom-8 right-8 bg-slate-700 text-teal-400 w-24 h-24 rounded-full shadow-lg flex items-center justify-center font-bold text-xl hover:bg-slate-600 transition-all duration-300 transform hover:scale-110 z-50 group">
+        <div class="w-16 h-16 rounded-full bg-teal-500 text-slate-900 flex items-center justify-center text-center font-bold text-sm transform group-hover:scale-95 transition-transform duration-300">
+            Resume
+        </div>
     </a>
 
     <!-- LinkedIn Badge Script -->
