--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
                 <p>
                     I am a tech-savvy graduate with a passion for technology, automation, and continuous learning. With nearly three years of experience as a Customer Associate at SquadStack, I have honed my skills in customer interaction, communication, and data handling.
                 </p>
+                <!-- UPDATED TEXT -->
                 <p class="mt-4">
-                    I am currently a trainee at Deshpande Skilling, where I'm further developing my technical and professional skills in areas like business communication, reasoning, aptitude, and technology. I am recognized for my adaptability, strong interpersonal skills, and a proactive approach to problem-solving.
+                    I recently completed my intensive training program at Deshpande Skilling, where I significantly developed my professional skills in business communication, logical reasoning, technical aptitude, and modern technology applications. I am recognized for my adaptability, strong interpersonal skills, and a proactive approach to problem-solving.
                 </p>
             </div>
         </section>
@@ -293,19 +294,19 @@
                         </div>
                     </div>
                 </div>
-                <!-- Trainee Item -->
+                <!-- UPDATED: Training Completion Item -->
                 <div class="relative pl-8 sm:pl-32 group">
                     <div class="absolute left-0 sm:left-16 top-0 bottom-0 w-1 bg-teal-500 rounded-full hidden sm:block"></div>
                     <div class="relative z-10 flex flex-col sm:flex-row items-start sm:items-center">
                         <div class="bg-teal-500 text-slate-900 rounded-full w-24 sm:w-32 py-2 text-center text-sm font-semibold flex-shrink-0 mb-4 sm:mb-0 transition-transform duration-300 group-hover:scale-110">
-                            Trainee
+                            Training Grad
                         </div>
                         <div class="sm:ml-8 bg-slate-800 p-6 rounded-2xl shadow-lg w-full transition-all duration-300 transform group-hover:-translate-y-1 group-hover:shadow-2xl">
-                            <h3 class="text-2xl font-bold text-white">Trainee, Deshpande Skilling</h3>
-                            <p class="text-slate-400">Hubli, Karnataka</p>
+                            <h3 class="text-2xl font-bold text-white">Completed Professional Training</h3>
+                            <p class="text-slate-400">Deshpande Skilling, Hubli, Karnataka</p>
                             <ul class="mt-2 text-slate-300 list-disc list-inside space-y-1">
-                                <li>Developing skills in business communication, reasoning, aptitude, and technology.</li>
-                                <li>Participating in real-world projects and industry-oriented training.</li>
+                                <li>Developed strong professional skills in business communication, reasoning, and technical aptitude.</li>
+                                <li>Participated and successfully delivered real-world simulation projects during the industry-oriented program.</li>
                             </ul>
                         </div>
                     </div>
@@ -523,7 +524,7 @@
 
         <!-- Short Films Section -->
         <section id="short-films" class="container mx-auto px-6 md:px-12 py-16 bg-slate-800 rounded-3xl shadow-xl">
-            <h2 class="text-4xl md:text-5xl font-bold text-center section-title mx-auto pb-4">Short Films</h2>
+            <h2 class="text-4xl md:text-5xl font-bold text-center section-title mx-auto pb-4">Short Films </h2>
             <div class="mt-12 text-center text-lg max-w-4xl mx-auto text-slate-300">
                 <p>
                     Here are some short films I directed during my 12th grade. They were a fun way to explore my creativity and storytelling skills.
